k8s/ingress/ingress-config.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: newjeans-ingress
spec:
  rules:
    - http:
        paths:
          - path: /calendar-service
            pathType: Prefix
            backend:
              service:
                name: calendar-service
                port:
                  number: 50002
          - path: /friends-service
            pathType: Prefix
            backend:
              service:
                name: friends-service
                port:
                  number: 50003
          - path: /message
            pathType: Prefix
            backend:
              service:
                name: messages-service
                port:
                  number: 50004
          - path: /noti
            pathType: Prefix
            backend:
              service:
                name: notice-service
                port:
                  number: 50005
          - path: /user-service
            pathType: Prefix
            backend:
              service:
                name: users-service
                port:
                  number: 50001
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: users-service
                port:
                  number: 50001
          - path: /
            pathType: Prefix
            backend:
              service:
                name: friends-service
                port:
                  number: 50003

  ingressClassName: nginx
